--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Header -->
   <header>
       <div id="logo">
-      <img scr="images/logo/Reservia.svg" alt="Logo Reservia"/>
+      <img scr="blob/main/images/logo/Reservia.svg" alt="Logo Reservia"/>
     </div>
 
     <nav class="navbar">
