logo link fix 4

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Header -->
   <header>
       <div id="logo">
-      <img src="images/logo/Reservia@3x.png" alt="Logo Reservia"/>
+      <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
     </div>
 
     <nav class="navbar">
