Modif et verification d'emplacement d'image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="block_lodging_photos">
               <h3 class="lodging_title">Hébergement à Marseille</h3>
            <div class="auberge_la_cannebiere">
-               <a href="#"><img src="https://callixtusb.github.io/CallixtusBlackettJr_2_16032021/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" class="auberge_pic"></a>
+               <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge La Cannebière" class="auberge_pic"></a>
             
             <div class="auberge_bloc_text_and_stars">
                <p><strong>Auberge La Cannebière</strong> <br>Nuit à partir de 25€</p>
