--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
   <div id="bloc_page">
     <!-- Header -->
     <header>
-        <div id="logo">
-        <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
-      </div>
+      <div id="logo">
+      <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
+    </div>
 
-      <nav>
-        <ul class="navbar">
-           <li><a href="#" class="lien_hebergement">Hébergement</a></li>
-           <li><a href="#" class="lien_activite">Activité</a></li>
-           <li><a href="#" class="lien_inscrire">S'inscrire</a></li>
-        </ul>
-      </nav>
-    </header>
+    <nav>
+      <ul class="navbar">
+         <li><a href="#lodging_title" class="lien_hebergement">Hébergement</a></li>
+         <li><a href="#activities_title" class="lien_activite">Activité</a></li>
+         <li><a href="#" class="lien_inscrire">S'inscrire</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <!-- Section 1 - Filter section -->
     <section id="search_section">
@@ -243,7 +243,7 @@
 <div class="bloc_vieuxPort_pomegues_and_Frioul">   
     
     <div class="vieuxPort_pic_and_text">
-    <h3>Activités à Marseille</h3>  
+    <h3 class="activities_title">Activités à Marseille</h3>  
        <a href="#"><img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" class="vieuxPort_pic" alt="Vieux Port"></a>
        <p>Vieux Port</p>
     </div>
