--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <header>
       <div id="logo">
       <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
+      <a href="#" class="lien_inscrire_xs">S'inscrire</a>
     </div>
 
     <nav>
