Responsive initial code

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
           <i class="fas fa-map-marker-alt"></i>
           <input type="text" id="myInput" placeholder="Marseille, France" title="Type in a location">
           <button class="rechercher" type="button" href="#">Rechercher</button>
+          <button class="rechercher_icon" type="button" href="#"><i class="fas fa-search"></i></button>
+          
        </div>
        
        <div class="filter_list">
