--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8">
     <link rel="stylesheet" href="style.css" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 	<!-- Twitter Card data -->
     <meta name="twitter:card" content="summary">
 
