--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Reservia</title>
+	<meta charset="utf-8">
+    <link rel="stylesheet" href="style.css" />
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+	<!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Reservia"/>
+    <meta property="og:type" content="Reservia"/>
+    <meta property="og:url" content="http://www.reservia.com/"/>
+    <meta property="og:image" content="http://example.com/image.jpg"/>
+    <meta property="og:description" content="Description Here"/>
+
+    <script src="https://kit.fontawesome.com/a458a90062.js" crossorigin="anonymous"></script>
+</head>
 <body>
   <div id="bloc_page">
     <!-- Header -->
@@ -308,3 +328,4 @@
   </div>
 </body>
 
+</html>
