--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <meta property="og:description" content="Description Here"/>
 
     <script src="https://kit.fontawesome.com/a458a90062.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="bloc_page">
