--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
            <h4 class="filter_title_icons" />Filters</h4>
            <ul id="filter_menu">
              <li><i class="fas fa-money-bill-wave"></i><a href="#" class="economique"/>Economique</a></li>
-             <li><i class="fas fa-child"></i><a href="#" class="familiale" />Familiale</a></li>
+             <li><i class="fas fa-child"></i><a href="#" class="familiale" />Familial</a></li>
              <li><i class="fas fa-heart"></i><a href="#" class="romantique" />Romantique</a></li>
              <li><i class="fas fa-dog"></i><a href="#"class="animaux" />Animaux authorisés</a></li>
            </ul>
