Rajout de class pour menu

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
       <nav>
         <ul class="navbar">
-           <li><a href="#lodging_title" class="lien_hebergement">Hébergements</a></li>
-           <li><a href="#activities_title" class="lien_activite">Activités</a></li>
+           <li class="bar_under"><a href="#lodging_title" class="lien_hebergement">Hébergements</a></li>
+           <li class="bar_under_activities"><a href="#activities_title" class="lien_activite">Activités</a></li>
            <li><a href="#" class="lien_inscrire">S'inscrire</a></li>
         </ul>
       </nav>
