Rajout de nvx navbar

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
            <li class="bar_under_activities"><a href="#activities_title" class="lien_activite">Activités</a></li>
            <li><a href="#" class="lien_inscrire">S'inscrire</a></li>
         </ul>
+
+        <ul class="navbar_main">
+          <li class="bar_above_hebergement"><a href="#lodging_title" class="lien_hebergement1">Hébergements</a></li>
+          <li class="bar_above_activities"><a href="#activities_title" class="lien_activite1">Activités</a></li>
+          <li><a href="#" class="lien_inscrire1">S'inscrire</a></li>
+       </ul>
       </nav>
       
     </header>
