--- a/index.html
+++ b/index.html
@@ -35,16 +35,24 @@
            <li class="bar_under"><a href="#lodging_title" class="lien_hebergement">Hébergements</a></li>
            <li class="bar_under_activities"><a href="#activities_title" class="lien_activite">Activités</a></li>
            <li><a href="#" class="lien_inscrire">S'inscrire</a></li>
-        </ul>
-
-        <ul class="navbar_main">
-          <li class="bar_above_hebergement"><a href="#lodging_title" class="lien_hebergement1">Hébergements</a></li>
-          <li class="bar_above_activities"><a href="#activities_title" class="lien_activite1">Activités</a></li>
-          <li><a href="#" class="lien_inscrire1">S'inscrire</a></li>
-       </ul>
+        </ul>     
       </nav>
-      
     </header>
+
+    <div class="header_main">
+      <div id="logo">
+        <img src="images/logo/Reservia.svg" class="logo" alt="Logo Reservia"/>
+        <a href="#" class="lien_inscrire_xs">S'inscrire</a>
+      </div>
+
+      <nav>
+         <ul class="navbar_main">
+           <li class="bar_above_hebergement"><a href="#lodging_title" class="lien_hebergement1">Hébergements</a></li>
+           <li class="bar_above_activities"><a href="#activities_title" class="lien_activite1">Activités</a></li>
+           <li><a href="#" class="lien_inscrire1">S'inscrire</a></li>
+        </ul>
+    </nav>
+    </div>
 
     <!-- Section 1 - Filter section -->
     <section id="search_section">
