2nd navbar adjustment

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     </header>
 
     <div class="header_main">
-      <div id="logo">
+      <div class="logo">
         <img src="images/logo/Reservia.svg" class="logo" alt="Logo Reservia"/>
-        <a href="#" class="lien_inscrire_xs">S'inscrire</a>
+        <a href="#" class="lien_inscrire_main">S'inscrire</a>
       </div>
 
       <nav>
