modified 2nd navbar

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </header>
 
     <div class="header_main">
-      <div class="logo">
-        <img src="images/logo/Reservia.svg" class="logo" alt="Logo Reservia"/>
+      <div class="logo_main">
+        <img src="images/logo/Reservia.svg" class="logo_main" alt="Logo Reservia"/>
         <a href="#" class="lien_inscrire_main">S'inscrire</a>
       </div>
 
