W3C validator - html corrections

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<title>Reservia</title>
 	<meta charset="utf-8">
@@ -65,17 +65,17 @@
          <div class="input_bloc">
             <i class="fas fa-map-marker-alt"></i>
             <input type="text" id="myInput" placeholder="Marseille, France" title="Type in a location">
-            <button class="rechercher" type="button" href="#">Rechercher</button>
-           <button class="rechercher_icon" type="button" href="#"><i class="fas fa-search"></i></button>
+            <button class="rechercher" type="button">Rechercher</button>
+           <button class="rechercher_icon" type="button"><i class="fas fa-search"></i></button>
          </div>
          
          <div class="filter_list">
-           <h4 class="filter_title_icons" />Filters</h4>
+           <h4 class="filter_title_icons">Filters</h4>
            <ul id="filter_menu">
-             <li><i class="fas fa-money-bill-wave"></i><a href="#" class="economique"/>Economique</a></li>
-             <li><i class="fas fa-child"></i><a href="#" class="familiale" />Familial</a></li>
-             <li><i class="fas fa-heart"></i><a href="#" class="romantique" />Romantique</a></li>
-             <li><i class="fas fa-dog"></i><a href="#"class="animaux" />Animaux authorisés</a></li>
+             <li><i class="fas fa-money-bill-wave"></i><a href="#" class="economique">Economique</a></li>
+             <li><i class="fas fa-child"></i><a href="#" class="familiale" >Familial</a></li>
+             <li><i class="fas fa-heart"></i><a href="#" class="romantique" >Romantique</a></li>
+             <li><i class="fas fa-dog"></i><a href="#" class="animaux" >Animaux authorisés</a></li>
            </ul>
          </div>
         </form>
@@ -154,7 +154,7 @@
             <div class="mere_bloc_text_and_stars">
             <p><strong>Hôtel de la mère</strong> <br>Nuit à partir de 46€</p>
               
-               <ul class="hotel_mere_stars" type="">
+               <ul class="hotel_mere_stars">
                  <li><i class="fas fa-star"></i></li>
                  <li><i class="fas fa-star"></i></li>
                  <li><i class="fas fa-star"></i></li>
